# commit-boost-client-docker-telemetry

./: Dockerfile  Makefile  config.example.toml  config.toml  keys.example.json
crates/cli/src/: docker_init.rs
crates/common/src/: constants.rs  types.rs
crates/common/src/config/: constants.rs  module.rs
crates/common/src/pbs/: constants.rs  event.rs  relay.rs
crates/common/src/pbs/types/: mod.rs  proposer.rs
crates/pbs/src/: api.rs  constants.rs
crates/pbs/src/mev_boost/: mod.rs  proposer.rs
crates/pbs/src/routes/: mod.rs  proposer.rs  router.rs
examples/preconf/: Cargo.toml  Dockerfile
examples/preconf/src/: api.rs  config.rs  constants.rs  elector.rs  error.rs  main.rs  types.rs
examples/preconf/src/beacon_client/: client.rs
scripts/: build_local_modules.sh
tests/tests/: config.rs
